--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-calendar-picker": "^7.0.2",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-masked-text": "^1.13.0",
     "react-native-pdf": "^6.2.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-render-html": "^4.2.4",
