--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Driver",
+    "name": "المندوب",
     "slug": "Driver",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./app/assets/albarqlogo.png",
     "splash": {
@@ -13,19 +13,17 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.alnahr.driverAlbarq",
-      "buildNumber": "1.0.0"
+      "buildNumber": "1.0.2"
     },
     "android": {
       "backgroundColor": "#FFFFFF",
       "useNextNotificationsApi": true,
       "package": "com.alnahr.driverAlbarq",
-      "versionCode": 1
+      "versionCode": 5
     },
     "web": {
       "favicon": "./app/assets/favicon.png"
