--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "^5.9.7",
     "@react-navigation/bottom-tabs": "^5.9.1",
+    "@react-navigation/material-bottom-tabs": "^5.3.9",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
     "@rimiti/react-native-toastify": "^1.3.0",
@@ -39,6 +40,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-masked-text": "^1.13.0",
+    "react-native-paper": "^4.4.0",
     "react-native-pdf": "^6.2.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-render-html": "^4.2.4",
